# Annotix

./: .env.example  .gitignore  .zenodo.json  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT.md  README.md  annotix.sh  build.json  check-translations.ts  eslint.config.js  find_duplicates.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  releases.json  roadmap_sam.md  vite.config.ts  yolo_training_presets.md
.github/workflows/: build-linux.yml  build-windows.yml  ci.yml  release.yml
DOCS/: remaining_annotation_types_reference.md  tabular_ml_backends_reference.md  training_backends_reference.md  yolo_hyperparameters_reference.md
connector/: BUILD_INSTRUCTIONS.md
css/: components.css  inference.css
docs/: PAPER_MAKE_MDPI.md  PRUEBAS_P2P.md  collaboration_sync_plan.md  fix_windows.md  mejoras-ui.md  project_types_architecture.md  roadmap-lint-cleanup.md  roadmap-perf-js-rust.md  roadmap_inference.md  roadmap_sam.md  security-roadmap.md  segmentation_backends_reference.md
js/: app.js  gallery-manager.js  inference-manager.js  training-code-generator.js
js/canvas/: canvas-base.js
legacy/: IMPORT_EXPORT_GUIDE.md  README.md  index.html  manifest.json
legacy/connector/: CONNECTOR_README.md  ROADMAP.md  motor_server.py  requirements.txt
legacy/css/: gallery.css
legacy/js/: app.js  companion_integration.js  database-manager.js  event-bus.js  i18n.js  onnx-parser.js  (+5 more)
locales/: en.json  es.json
scripts/: bump-version.sh  download-pdfium.ps1  download-pdfium.sh  split-locales.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.config/: nextest.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: Korean.nsh
src-tauri/selectors/: colab_free.toml  deepseek.toml  huggingchat.toml  kimi.toml  qwen.toml
src-tauri/src/: lib.rs  main.rs  tests.rs
src-tauri/src/browser_automation/: browser_detect.rs  browser_session.rs  colab_free.rs  llm_chat.rs  mod.rs  selectors.rs  step_engine.rs
src-tauri/src/browser_automation/providers/: deepseek.rs  huggingchat.rs  kimi.rs  mod.rs  qwen.rs
src-tauri/src/commands/: audio_commands.rs  audio_edit_commands.rs  automation_commands.rs  config_commands.rs  csv_commands.rs  export_commands.rs  fs_commands.rs  image_commands.rs  image_processing_commands.rs  import_commands.rs  inference_commands.rs  mod.rs  p2p_commands.rs  pdf_commands.rs  pixel_commands.rs  project_commands.rs  sam_commands.rs  serve_commands.rs  settings_commands.rs  storage_commands.rs  tabular_commands.rs  timeseries_commands.rs  training_commands.rs  tts_commands.rs  video_commands.rs
src-tauri/src/db/: connection.rs  images.rs  inference_cache.rs  migrations.rs  mod.rs  models.rs  projects.rs  timeseries.rs  training_jobs.rs  video_tracks.rs  videos.rs
src-tauri/src/export/: audio_export.rs  coco.rs  csv_export.rs  folders_by_class.rs  mod.rs  pascal_voc.rs  preview_rasterized.rs  tix.rs  unet_masks.rs  yolo.rs
src-tauri/src/import/: coco.rs  csv_import.rs  folders_by_class.rs  format_detector.rs  merge.rs  mod.rs  pascal_voc.rs  tix.rs  unet_masks.rs  yolo.rs
src-tauri/src/inference/: mod.rs  ort_runner.rs  runner.rs  scripts.rs
src-tauri/src/inference/sam/: amg.rs  conversion.rs  decoder.rs  encoder.rs  mod.rs  postprocess.rs  preprocess.rs  state.rs
src-tauri/src/p2p/: crypto.rs  distribution.rs  locks.rs  mod.rs  node.rs  protocol.rs  session.rs  sync.rs  ticket.rs
src-tauri/src/serve/: mod.rs  routes.rs  server.rs  web_ui.html  web_ui.rs
src-tauri/src/store/: audio.rs  config.rs  images.rs  inference.rs  io.rs  mod.rs  project_file.rs  projects.rs  safe_path.rs  sam_models.rs  state.rs  tabular.rs  timeseries.rs  videos.rs
src-tauri/src/training/: backends.rs  dataset.rs  gpu.rs  micromamba.rs  migrate.rs  mod.rs  model_export.rs  notebook.rs  package.rs  python_env.rs  runner.rs  scripts.rs
src-tauri/src/training/cloud/: colab.rs  gcp_auth.rs  gcs.rs  huggingface.rs  kaggle.rs  lightning.rs  mod.rs  saturn.rs  vertex_custom.rs  vertex_tuning.rs
src-tauri/src/utils/: converters.rs  douglas_peucker.rs  mask_to_polygon.rs  mod.rs
src-tauri/tests/: p2p_transfer.rs
wiki/: Annotation-Tools.md  Architecture.md  Browser-Automation.md  Export-and-Import.md  Getting-Started.md  Home.md  Inference.md  Integrated-ML-Training.md  Keyboard-Shortcuts.md  Languages.md  P2P-Collaboration.md  Tabular-Data.md  Time-Series.md  Video-Annotation.md  _Sidebar.md
(+809 files in other folders)
