[package]
name = "annotix"
version = "2.0.0"
description = "Annotix - ML Dataset Annotation Tool"
authors = ["TecMedHub"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "annotix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
image = "0.25"
uuid = { version = "1", features = ["v4"] }
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.37", features = ["serialize"] }
ffmpeg-the-third = "4"
csv = "1.3"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tempfile = "3"
