[package]
name = "annotix"
version = "2.0.0"
description = "Annotix - ML Dataset Annotation Tool"
authors = ["TecMedHub"]
license = "MIT"
edition = "2021"
rust-version = "1.89"

[lib]
name = "annotix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
image = "0.25"
uuid = { version = "1", features = ["v4"] }
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.37", features = ["serialize"] }
ffmpeg-the-third = "4"
csv = "1.3"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "multipart", "blocking"], default-features = false }
jsonwebtoken = "9"
tempfile = "3"
iroh = "0.96"
iroh-blobs = { version = "0.98", features = ["fs-store"] }
iroh-gossip = { version = "0.96", features = ["net"] }
iroh-docs = "0.96"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
bytes = "1"
futures-lite = "2"
blake3 = "1"
